--- a/index.html
+++ b/index.html
@@ -9,8 +9,39 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-    <h1> Hola mundo, Emmanuel A. </h1>
-
-    <h3> Aqui se estaran publicando algunas pruebas. </h3>
+    <div class="wallpaper"></div>
+    <div class="content">
+        <aside class="side">
+            <figure class="picture">
+                <div class="picture-shadow"></div>
+                <img id="pictureImage" class="picture-image">
+                    src="images/emmanuel.jpg"
+                    srcset="images/emmanuel.jpg 1x,
+                            images/emmanuel@2x.jpg 2x,
+                            images/emmanuel@3x.jpg 3x"
+                    alt="Portrait of Emmanuel Alanis"
+                    width="320"
+                    height="320">
+            </figure>
+        </aside>
+        <main class="about">
+            <h1 class="name">
+                Hi, I'm Emmanuel Alanis
+            </h1>
+            <p class="job">
+                Jr. Developer
+            </p>
+            <hr class="hr">
+            <div class="description">
+                <p>
+                    I like all about technology, 
+                    learning all as possible for me.
+                </p>
+            </div>
+            <div class="contact">
+                <a href="mailto:ealanisln@me.com" class="button">Get in touch</a>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
