--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <aside class="side">
             <figure class="picture">
                 <div class="picture-shadow"></div>
-                <img id="pictureImage" class="picture-image">
+                <img id="pictureImage" class="picture-image"
                     src="images/emmanuel.jpg"
                     srcset="images/emmanuel.jpg 1x,
                             images/emmanuel@2x.jpg 2x,
