--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Template 1.0</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand" rel="stylesheet">
 </head>
 <body>
     <div class="wallpaper"></div>
