--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
 </head>
 <body>
     <div class="wallpaper"></div>
@@ -39,6 +40,19 @@
                     learning all as possible for me.
                 </p>
             </div>
+            <div class="social"><ul class="social">
+                <li>
+                  <a>
+                    <i class="fab fa-twitter"></i>
+              </a> </li>
+              <li> <a>
+                    <i class="fab fa-github"></i>
+                  </a>
+              </li> <li>
+                  <a>
+                    <i class="fab fa-linkedin"></i>
+              </a> </li>
+              </ul></div>
             <div class="contact">
                 <a href="mailto:ealanisln@me.com" class="button">Get in touch</a>
             </div>
