Updated image properties to check if works.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
                             images/emmanuel@2x.jpg 2x,
                             images/emmanuel@3x.jpg 3x"
                     alt="Portrait of Emmanuel Alanis"
-                    width="320"
-                    height="320">
+                    sizes='(min-width: 960px) 960px, 100vw'>
             </figure>
         </aside>
         <main class="about">
