--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <div class="picture-shadow"></div>
                 <img id="pictureImage" class="picture-image"
                     src="images/emmanuel.jpg"
-                    srcset="images/emmanuel.jpg 1x,
-                            images/emmanuel@2x.jpg 2x,
-                            images/emmanuel@3x.jpg 3x"
+                    srcset="../images/emmanuel.jpg 1x,
+                            ../images/emmanuel@2x.jpg 2x,
+                            ../images/emmanuel@3x.jpg 3x"
                     alt="Portrait of Emmanuel Alanis"
                     sizes='(min-width: 960px) 960px, 100vw'>
             </figure>
