--- a/index.html
+++ b/index.html
@@ -18,13 +18,7 @@
             <figure class="picture">
                 <div class="picture-shadow"></div>
                 <img id="pictureImage" class="picture-image"
-                    src="images/emmanuel.jpg"
-                    srcset="images/emmanuel.jpg 1x,
-                            images/emmanuel@2x.jpg 2x,
-                            images/emmanuel@3x.jpg 3x"
-                    alt="Portrait of Emmanuel Alanis"
-                    width="320"
-                    height="320">
+                    src="images/emmanuel.jpg">
             </figure>
         </aside>
         <main class="about">
