--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             images/emmanuel@3x.jpg 3x"
                     alt="Portrait of Emmanuel Alanis"
                     width="320"
-                    height="320">
+                    height="320">s
             </figure>
         </aside>
         <main class="about">
@@ -37,8 +37,10 @@
             <hr class="hr">
             <div class="description">
                 <p>
-                    I like all about technology, 
-                    learning all as possible for me.
+                    Born in Mexico City, and now in SF Bay Area. I'm passionate for technology. With 10 years for experience working as tech support.
+                </p>
+                <p>
+                    Now starting on this new stage, discovering everything about how the computers follows our needs on the web.
                 </p>
             </div>
             <div class="social"><ul class="social">
