Corrected profile image and added new background.

--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
             <hr class="hr">
             <div class="description">
                 <p>
-                    Born in Mexico City, and now in SF Bay Area. I'm passionate for technology. With 10 years for experience working as tech support.
-                </p>
-                <p>
+                    Born in Mexico City, living now in SF Bay Area. I'm passionate for technology. With 10 years for experience working as tech support.
                     Now starting on this new stage, discovering everything about how the computers follows our needs on the web.
                 </p>
             </div>
