Body was edited and social button link was added.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             images/emmanuel@3x.jpg 3x"
                     alt="Portrait of Emmanuel Alanis"
                     width="320"
-                    height="320">s
+                    height="320">
             </figure>
         </aside>
         <main class="about">
@@ -37,7 +37,7 @@
             <hr class="hr">
             <div class="description">
                 <p>
-                    Born in Mexico City, living now in SF Bay Area. I'm passionate for technology. With 10 years for experience working as tech support. 
+                    Born in Mexico City, raised in León, México and now i'm living in SF Bay Area. I'm passionate for technology. Over 10 years experience working as tech support. 
                 </p>
                 <p>
                     Now starting on this new stage, discovering everything about how the computers follows our needs on the web.
@@ -45,14 +45,14 @@
             </div>
             <div class="social"><ul class="social">
                 <li>
-                  <a>
+                  <a href="https://www.twitter.com/ealanisln">
                     <i class="fab fa-twitter"></i>
               </a> </li>
-              <li> <a>
+              <li> <a href="https://github.com/Ealanisln">
                     <i class="fab fa-github"></i>
                   </a>
               </li> <li>
-                  <a>
+                  <a href="https://www.linkedin.com/in/ealanis/">
                     <i class="fab fa-linkedin"></i>
               </a> </li>
               </ul></div>
