First nav menu added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 </head>
 <body>
     <div class="wallpaper"></div>
+    <nav>
+        <h2>Developer Jr. </h2>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Experience</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
     <div class="content">
         <aside class="side">
             <figure class="picture">
