Updated some text.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="wallpaper"></div>
     <nav>
-        <h2>Developer Jr. </h2>
+        <h2>Front End Dev</h2>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Experience</a></li>
@@ -40,7 +40,7 @@
                 Hi, I'm Emmanuel Alanis
             </h1>
             <p class="job">
-                Jr. Developer
+                HTML, CSS and JavaScript. 
             </p>
             <hr class="hr">
             <div class="description">
